# herwig

./: .cvsignore  .hgignore  .hgtags  AUTHORS  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.in  NEWS  README  acinclude.m4  cat_with_cpplines  configure  configure.ac  configure.in  createCvsRepository.sh  patch_added_newColourReconnection.diff
API/: Filesystem.cc  Filesystem.h  HerwigAPI.cc  HerwigAPI.h  HerwigUI.h  Makefile.am  RunDirectories.cc  RunDirectories.h
Analysis/: .cvsignore  BELLECharmAnalysis.cc  BELLECharmAnalysis.fh  BELLECharmAnalysis.h  BELLECharmAnalysis.icc  BFragmentationAnalysisHandler.cc  BFragmentationAnalysisHandler.fh  BFragmentationAnalysisHandler.h  BFragmentationAnalysisHandler.icc  BabarBDecayAnalysis.h  BasicConsistency.cc  BasicConsistency.fh  BasicConsistency.h  BasicConsistency.icc  BbarAnalysis.cc  BbarAnalysis.fh  BbarAnalysis.h  BbarAnalysis.icc  BeamCorrelationAnalysis.cc  BeamCorrelationAnalysis.fh  BeamCorrelationAnalysis.h  BeamCorrelationAnalysis.icc  BranchingRatioAnalysis.cc  BranchingRatioAnalysis.fh  BranchingRatioAnalysis.h  BranchingRatioAnalysis.icc  BtoSGammaAnalysis.cc  BtoSGammaAnalysis.fh  BtoSGammaAnalysis.h  BtoSGammaAnalysis.icc  CLEOCharmAnalysis.cc  CLEOCharmAnalysis.fh  CLEOCharmAnalysis.h  CLEOCharmAnalysis.icc  CrossSectionAnalysis.cc  CrossSectionAnalysis.h  DDalitzAnalysis.cc  DDalitzAnalysis.fh  DDalitzAnalysis.h  DDalitzAnalysis.icc  (+227 more)
Analysis2/: Analysis2Base.cc  Analysis2Base.h  Analysis2Base.icc  EventShapes2.cc  EventShapes2.h  EventShapes2.icc  FastJetFinder.cc  FastJetFinder.h  FastJetFinder.icc  FastJetInterface.cc  FastJetInterface.fh  FastJetInterface.h  FastJetInterface.icc  FourJetCorrelations.cc  FourJetCorrelations.h  FourJetCorrelations.icc  GnuplotOutput.cc  GnuplotOutput.h  GnuplotOutput.icc  JetFinder.cc  JetFinder.h  JetFinder.icc  KtJetFinder.cc  KtJetFinder.fh  KtJetFinder.h  KtJetFinder.icc  KtJetInterface.cc  KtJetInterface.fh  KtJetInterface.h  KtJetInterface.icc  Makefile.am  YMerge.cc  YMerge.h  YMerge.icc
Config/: .cvsignore  GlobalParameters.cc  GlobalParameters.h  GlobalParameters.icc  HepMCHelper.h  HepMCHelper_CLHEP.h  HepMCHelper_HepMC.h  Herwig.h  Makefile  Makefile.common  Makefile.common.in  Makefile.install  config.cache  config.h  config.h.in  config.status  configure  configure.in  g++dep
Contrib/: Makefile.am  make_makefiles.sh.in
Decay/: BranchingRatioReweighter.cc  BranchingRatioReweighter.h  DecayConfig.h  DecayIntegrator.cc  DecayIntegrator.fh  DecayIntegrator.h  DecayIntegrator.icc  DecayIntegrator2.cc  DecayIntegrator2.fh  DecayIntegrator2.h  DecayMatrixElement.cc  DecayMatrixElement.fh  DecayMatrixElement.h  DecayMatrixElement.icc  DecayPhaseSpaceChannel.cc  DecayPhaseSpaceChannel.fh  DecayPhaseSpaceChannel.h  DecayPhaseSpaceChannel.icc  DecayPhaseSpaceMode.cc  DecayPhaseSpaceMode.fh  DecayPhaseSpaceMode.h  DecayPhaseSpaceMode.icc  DecayVertex.cc  DecayVertex.fh  DecayVertex.h  DecayVertex.icc  ExampleDecayer.cc  ExampleDecayer.h  ExampleDecayer.icc  GeneralDecayMatrixElement.cc  GeneralDecayMatrixElement.fh  GeneralDecayMatrixElement.h  HeavyDecayer.cc  HeavyDecayer.h  Hw64Decayer.cc  Hw64Decayer.cc~  Hw64Decayer.fh  Hw64Decayer.h  Hw64Decayer.h~  Hw64Decayer.icc  (+41 more)
DipoleShower/: DipoleShowerHandler.cc  DipoleShowerHandler.h  Makefile.am
Doc/: .cvsignore  BSMlibs.in  HerwigDefaults.in  HerwigDefaults.in.in  KtJetAnalysis.in  Makefile  Makefile.am  NewDecayers.in  README  Root.in  dohtml.pl  fixinterfaces.pl  fixinterfaces.pl.in  h2html.awk  refman.conf  refman.conf.in  refman.h  refman.h.in  refmanThePEG.conf  tagfileThePEG.tag
Exsample2/: BinSampler.cc  BinSampler.h  BinnedStatistics.cc  BinnedStatistics.h  CellGridSampler.cc  CellGridSampler.h  EnhanceNLOContributions.cc  EnhanceNLOContributions.h  ExSampler2.cc  ExSampler2.h  GeneralSampler.cc  GeneralSampler.h  GeneralStatistics.cc  GeneralStatistics.h  Makefile.am  MultiIterationStatistics.cc  MultiIterationStatistics.h  ProjectingSampler.cc  ProjectingSampler.h  SamplingBias.cc  SamplingBias.h  SimpleCellGridSampler.cc  SimpleCellGridSampler.h  exsampler.cc  exsampler.h
Hadronization/: CheckId.cc  CheckId.h  CheckId.icc  CluHadConfig.h  Cluster.cc  Cluster.fh  Cluster.h  Cluster.icc  ClusterDecayer.cc  ClusterDecayer.fh  ClusterDecayer.h  ClusterDecayer.icc  ClusterFinder.cc  ClusterFinder.fh  ClusterFinder.h  ClusterFinder.icc  ClusterFissioner.cc  ClusterFissioner.fh  ClusterFissioner.h  ClusterFissioner.icc  ClusterHadronizationHandler.cc  ClusterHadronizationHandler.fh  ClusterHadronizationHandler.h  ClusterHadronizationHandler.icc  ColourReconnector.cc  ColourReconnector.fh  ColourReconnector.h  ColourReconnector.icc  Component.cc  Component.h  Component.icc  DarkHadronSpectrum.cc  DarkHadronSpectrum.h  DarkHwppSelector.cc  DarkHwppSelector.fh  DarkHwppSelector.h  DynamicClusterFissioner.cc  DynamicClusterFissioner.h  DynamicGluonMassGenerator.cc  DynamicGluonMassGenerator.h  (+56 more)
Interfaces/: AmegicInterface.cc  AmegicInterface.h  AmegicInterface.icc  EvtGen.cc  EvtGen.fh  EvtGen.h  EvtGen.icc  EvtGenDecayer.cc  EvtGenDecayer.fh  EvtGenDecayer.h  EvtGenDecayer.icc  EvtGenRandom.h  EvtShapes.cc  EvtShapes.h  KtJetInterface.cc  KtJetInterface.h  Makefile  Makefile.am  Makefile.in  POWHEGReader.h  RootInterface.cc  RootInterface.h
Looptools/: .cvsignore  Makefile.am  README  clooptools.cc  tester.cc
MatrixElement/: .cvsignore  BlobME.cc  BlobME.h  DrellYanBase.cc  DrellYanBase.h  GeneralHardME.cc  GeneralHardME.fh  GeneralHardME.h  GeneralHardME.icc  HardVertex.cc  HardVertex.fh  HardVertex.h  HardVertex.icc  HwME2to2Base.cc  HwME2to2Base.h  HwME2to2Base.icc  HwMEBase.cc  HwMEBase.fh  HwMEBase.h  ME2to4Base.cc  ME2to4Base.h  MEDM2Mesons.cc  MEDM2Mesons.h  MEMinBias.cc  MEMultiChannel.cc  MEMultiChannel.h  MEPP2GammaGamma.cc  MEPP2GammaGamma.fh  MEPP2GammaGamma.h  MEPP2GammaGamma.icc  MEPP2GammaJet.cc  MEPP2GammaJet.h  MEPP2GammaJet.icc  MEPP2Higgs.cc  MEPP2Higgs.h  MEPP2Higgs.icc  MEPP2HiggsJet.cc  MEPP2HiggsJet.fh  MEPP2HiggsJet.h  MEPP2HiggsJet.icc  (+112 more)
Models/: Makefile  Makefile.am
PDF/: MRST.h  (+53 more)
(+6694 files in other folders)
