dnl Process this file with autoconf to produce a configure script.
dnl
AC_INIT(Makefile)

AC_PROGRAMS_CHECK(CXX, g++ cl KCC CC cxx xlC aCC)

AC_LANG_CPLUSPLUS
AC_PROGRAMS_CHECK(AR, ar)
if test -z "$ARFLAGS"; then
  ARFLAGS="rv "
fi
AC_PROG_RANLIB
if test -z "$CLHEPPATH"; then
CLHEPPATH=
fi

if test -z "$CLHEPLIB"; then
  CLHEPLIB="CLHEP"
fi

if test -z "$THEPEGPATH"; then
THEPEGPATH=
fi

if test -z "$THEPEGLIB"; then
  THEPEGLIB="-lThePEGRepo -lThePEGHandlers -lThePEGPDF -lThePEGME -lThePEGEvent -lThePEGPDT -lThePEGSM -lThePEGInter -lThePEG"
fi

UILDDIR=`pwd`

AC_SUBST(AR)
AC_SUBST(ARFLAGS)
AC_SUBST(RANLIB)
AC_SUBST(CLHEPPATH)
AC_SUBST(CLHEPLIB)
AC_SUBST(THEPEGPATH)
AC_SUBST(THEPEGLIB)
AC_SUBST(BUILDDIR)
AC_CONFIG_HEADER(config.h)
AC_OUTPUT(../Doc/h2html Makefile.common)
chmod 755 ../Doc/h2html
